--- a/client/src/pages/PersonalChatPage.css
+++ b/client/src/pages/PersonalChatPage.css
@@ -97,6 +97,14 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-height: 0;
+}
+
+.personal-chat-chat-area {
+  flex: 1;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .personal-chat-back {
